--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   }
 }
